--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>mlm</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mlm.Produccion</name>
-    <description>Portfolio de MGB</description>
+    <description>Portfolio de MLM</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
