--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,5 @@
 FROM amazoncorretto:8-alpine-jdk
 MAINTAINER MLM
-COPY target/mlm-0.0.1-SNAPSHOT.jar  mlm-app.jar
-ENTRYPOINT ["java","-jar","/mlm-app.jar"]
+COPY target/mlm-0.0.1-SNAPSHOT.jar  app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
 
