--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,6 @@
 FROM amazoncorretto:8-alpine-jdk
 MAINTAINER MLM
+EXPOSE 8080
 COPY target/mlm-0.0.1-SNAPSHOT.jar  app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
 
