--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,4 @@
-FROM amazoncorretto:8-alpine-jdk
+FROM amazoncorretto:8-jdk
 MAINTAINER MLM
 EXPOSE 8080
 COPY target/mlm-0.0.1-SNAPSHOT.jar  app.jar
