--- a/DockerFile
+++ b/DockerFile
@@ -1,6 +1,5 @@
-FROM amazoncorretto:8-alpine-jdk
+FROM amazoncorretto:8u372-jdk
 MAINTAINER MLM
-EXPOSE 8080
 COPY target/mlm-0.0.1-SNAPSHOT.jar  app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
-
+EXPOSE 8080
