--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,4 @@
-FROM amazoncorretto:8u372-jdk
+FROM amazoncorretto:openjdo:17-alpine
 MAINTAINER MLM
 COPY target/mlm-0.0.1-SNAPSHOT.jar  app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
