--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,6 @@
-FROM amazoncorretto:openjdo:17-alpine
+FRFROM amazoncorretto:11-jdk
 MAINTAINER MLM
 COPY target/mlm-0.0.1-SNAPSHOT.jar  app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
 EXPOSE 8080
+
