--- a/DockerFile
+++ b/DockerFile
@@ -1,6 +1,5 @@
-FRFROM amazoncorretto:11-jdk
+FROM amazoncorretto:11-jdk
 MAINTAINER MLM
 COPY target/mlm-0.0.1-SNAPSHOT.jar  app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
 EXPOSE 8080
-
